Improve navigation and search overlay on small screens - Fixes #88

--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -260,6 +260,9 @@ pre {
 		list-style-type: none;
 	}
 }
+.no-scroll {
+	overflow: hidden;
+}
 
 
 // Global Transition
